# PicoJobCoordinator

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  blink.dis  blink.elf  blink.elf.map  blink.hex  blink.uf2  cmake_install.cmake  hello_world.dis  hello_world.elf  hello_world.elf.map  hello_world.hex  hello_world.uf2  multicore.dis  multicore.elf  multicore.elf.map  multicore.hex  multicore.uf2  partition.dis  partition.elf  partition.elf.map  partition.hex  partition.uf2  serial.dis  serial.elf  serial.elf.map  serial.hex  serial.uf2  serverless.dis  serverless.elf  serverless.elf.map  serverless.hex  serverless.uf2  sources.txt
elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake  elf2uf2
elf2uf2/boot_uf2_headers/: Makefile
elf2uf2/tmp/: ELF2UF2Build-mkdirs.cmake
pico-sdk/: Makefile  cmake_install.cmake
pico-sdk/docs/: Makefile  cmake_install.cmake
pico-sdk/src/: Makefile  cmake_install.cmake
pico-sdk/src/common/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_base/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_bit_ops/: Makefile  cmake_install.cmake
pico-sdk/src/common/pico_divider/: Makefile  (+1 more)
pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
pico-sdk/tools/: Makefile  cmake_install.cmake
pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake  pioasm
src/: blink.c  multicore.c  partition.c  serial.c  serverless.c
(+135 files in other folders)
